--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,23 @@
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  gap: 10px;
+}
+
+.linkWrapper {
+  width: 100%;
+  height: 50px;
+  border-radius: 20px;
+  text-align: center;
+  border: none;
+  margin: auto;
+  font-size: 20px; 
+
+}
+
 .list-bg {
   background: rgb(249, 250, 255);
   padding: 10px;
@@ -18,3 +38,30 @@
   color: grey;
   margin : 5px 0px;
 } 
+
+.p-20 {
+  padding: 20px;
+}
+
+input {
+  box-sizing: border-box;
+  padding: 10px;
+  display: block;
+  margin-bottom: 10px;
+}
+
+button {
+  padding: 10px 15px;
+  background: lightgray;
+  border: none;
+  border-radius: 5px;
+}
+
+.join-container {
+  margin: auto;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
