--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,3 +70,10 @@ a {
   text-decoration: none;
   color: black;
 }
+
+.dark-mode .navbar {
+  background: #222;
+}
+.dark-mode .navbar a {
+  color: white;
+} 
